k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
        - name: express-app
          image: admintita/express-app:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
