k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  type: NodePort
  selector:
    app: express-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
